<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/title"
        android:text="@string/title"
        style="@style/title" />

<!--    <View-->
<!--        android:id="@+id/title_break"-->
<!--        style="@style/linebreak"-->
<!--        android:layout_below="@+id/title"-->
<!--        android:background="@color/black" />-->

    <androidx.cardview.widget.CardView
      android:id="@+id/top_story"
      android:layout_below="@id/title"
      style="@style/top_card">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/top_heading"
                android:text="@string/top_coverage"
                style="@style/heading"
                />
            <ImageView
                android:layout_below="@id/top_heading"
                android:id="@+id/top_card_image"
                style="@style/top_card_image"
                android:adjustViewBounds="true"
                android:src="@drawable/sun_tree"
                />
            <TextView
                android:layout_below="@id/top_card_image"
                android:text="subtext"
                android:id="@+id/top_card_image_subtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_below="@id/top_card_image_subtext"
                android:id="@+id/main_line"
                android:text="@string/title1"
                style="@style/heading"
                />
            <TextView
                android:layout_below="@id/main_line"
                style="@style/time"
                android:text="@string/time"
                android:id="@+id/top_card_time"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
<!--second card-->
    <androidx.cardview.widget.CardView
        android:id="@+id/second_story"
        android:layout_below="@id/top_story"
        style="@style/top_card">
        <RelativeLayout
            style="@style/card_layout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbs_news"
                android:id="@+id/second_story_header"
                style="@style/heading"/>
            <TextView
                android:layout_below="@id/second_story_header"
                android:text="@string/txt_1"
                android:id="@id/second_story"
                style="@style/txt"/>
            <ImageView
                android:layout_below="@id/second_story_header"
                android:layout_toEndOf="@id/second_story"
                android:id="@+id/second_story_img"
                android:src="@drawable/shrike"
                style="@style/other_card_image"/>
            <TextView
                android:layout_below="@id/second_story"
                style="@style/time"
                android:text="@string/time"

                />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
<!--    third card-->
    <androidx.cardview.widget.CardView
        android:id="@+id/third_story"
        android:layout_below="@id/second_story"
        style="@style/top_card">
        <RelativeLayout
            style="@style/card_layout">
            <TextView
                android:text="@string/cnn"
                android:id="@+id/third_story_header"
                style="@style/heading"/>
            <TextView
                android:layout_below="@id/third_story_header"
                android:text="@string/txt_1"
                android:id="@id/third_story"
                style="@style/txt"/>
            <ImageView
                android:layout_below="@id/third_story_header"
                android:layout_toEndOf="@id/third_story"
                android:id="@+id/third_story_img"
                android:src="@drawable/eagle"
                style="@style/other_card_image"/>
            <TextView
                android:layout_below="@id/third_story"
                android:text="@string/time"
                style="@style/time"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>